--- a/index.html
+++ b/index.html
@@ -1,76 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Agenda SISREG Amazonas</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login | Agenda</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="shared/css/variables.css">
-    <link rel="stylesheet" href="shared/css/base.css">
-    <link rel="stylesheet" href="shared/css/theme.css">
-    <link rel="stylesheet" href="shared/css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="shared/css/variables.css">
+  <link rel="stylesheet" href="shared/css/style.css">
 </head>
 
-<body class="login-page">
-    <div id="header-placeholder"></div>
+<body>
+  <main class="login-container">
 
-    <main class="container">
-        <section class="login-container" style="max-width: 450px; margin: 60px auto;">
-            
-            <div class="login-brand" style="text-align: center; margin-bottom: 30px;">
-                <div style="background: var(--am-blue-dark); width: 80px; height: 80px; border-radius: var(--am-radius); display: flex; align-items: center; justify-content: center; margin: 0 auto 15px; border-bottom: 4px solid var(--am-red);">
-                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-                        <line x1="16" y1="2" x2="16" y2="6"></line>
-                        <line x1="8" y1="2" x2="8" y2="6"></line>
-                        <line x1="3" y1="10" x2="21" y2="10"></line>
-                    </svg>
-                </div>
-                <h1 style="color: var(--am-blue-dark); margin: 0; font-size: 1.8rem; font-weight: 700;">AGENDA SISREG</h1>
-                <p style="color: var(--am-text); opacity: 0.7; font-size: 0.9rem;">Complexo Regulador do Amazonas</p>
-            </div>
+    <section class="login-brand">
+      <div class="login-brand__icon">
+        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+          <line x1="16" y1="2" x2="16" y2="6"></line>
+          <line x1="8" y1="2" x2="8" y2="6"></line>
+          <line x1="3" y1="10" x2="21" y2="10"></line>
+        </svg>
+      </div>
 
-            <div class="card" style="background: white; padding: 30px; border-radius: var(--am-radius); box-shadow: var(--am-shadow); border-top: 5px solid var(--am-yellow);">
-                <h2 style="font-size: 1.2rem; margin-bottom: 5px; color: var(--am-blue-dark);">Acesso Restrito</h2>
-                <p style="font-size: 0.85rem; margin-bottom: 25px; color: var(--am-text); opacity: 0.8;">Selecione sua unidade executante para prosseguir.</p>
+      <div class="login-brand__text">
+        <h1>AGENDA SISREG</h1>
+        <p>Complexo Regulador do Amazonas</p>
+      </div>
+    </section>
 
-                <form id="formLogin">
-                    <div style="margin-bottom: 20px;">
-                        <label for="unidadeSelect" style="display: block; font-size: 0.8rem; font-weight: 600; margin-bottom: 8px; color: var(--am-blue-dark);">Unidade de Saúde</label>
-                        <select id="unidadeSelect" required style="width: 100%; padding: 12px; border: 1px solid var(--am-gray-light); border-radius: 8px; background: var(--am-bg-main); font-family: inherit;">
-                            <option value="" disabled selected>Carregando unidades...</option>
-                        </select>
-                    </div>
+    <section class="login-card">
+      <h2>Acesso Restrito</h2>
+      <p class="login-card__subtitle">Selecione sua unidade executante para prosseguir.</p>
 
-                    <div style="margin-bottom: 25px;">
-                        <label for="password" style="display: block; font-size: 0.8rem; font-weight: 600; margin-bottom: 8px; color: var(--am-blue-dark);">Senha (CNES da Unidade)</label>
-                        <input type="password" id="password" placeholder="Digite o código CNES" required style="width: 100%; padding: 12px; border: 1px solid var(--am-gray-light); border-radius: 8px; background: var(--am-bg-main); font-family: inherit;">
-                    </div>
+      <form id="formLogin">
+        <div class="form-group">
+          <label for="unidadeSelect">Unidade de Saúde</label>
+          <select id="unidadeSelect" class="form-control" required>
+            <option value="" disabled selected>Carregando unidades...</option>
+          </select>
+        </div>
 
-                    <button type="submit" style="width: 100%; padding: 14px; background: var(--am-blue-dark); color: white; border: none; border-radius: 8px; font-weight: 700; cursor: pointer; transition: var(--am-transition); text-transform: uppercase; letter-spacing: 1px;">
-                        Entrar no Sistema
-                    </button>
+        <div class="form-group">
+          <label for="password">Senha (CNES ou código da Unidade)</label>
+          <input type="password" id="password" class="form-control" placeholder="Digite o código" required />
+        </div>
 
-                    <div id="loginError" style="color: var(--am-red); font-size: 0.8rem; margin-top: 15px; text-align: center; font-weight: 600;"></div>
-                </form>
-            </div>
-        </section>
-    </main>
+        <button type="submit" class="btn btn-primary">Entrar no Sistema</button>
 
-    <div id="footer-placeholder"></div>
+        <div id="loginError" class="form-error" aria-live="polite"></div>
+      </form>
+    </section>
 
-    <script src="config/config.js"></script>
-    <script src="shared/components/footer.js"></script>
-    <script src="js/login.js"></script>
+  </main>
 
-    <script>
-        // Inicializa o rodapé compartilhado e injeta as configurações do CONFIG
-        window.addEventListener('DOMContentLoaded', () => {
-            if (typeof carregarFooter === 'function') {
-                carregarFooter();
-            }
-        });
-    </script>
+  <footer id="footerCreditos" class="app-footer app-footer--login"></footer>
+
+  <script src="js/login.js"></script>
+  <script>
+    // Script para carregar os créditos do rodapé
+    fetch("data/config.json").then(r => r.json()).then(d => {
+      document.getElementById("footerCreditos").innerHTML =
+        `© ${d.ano} - <strong>${d.sistema}</strong> | ${d.desenvolvedor}`;
+    }).catch(e => console.error("Erro ao carregar config.json:", e));
+  </script>
 </body>
 </html>
