--- a/index.html
+++ b/index.html
@@ -34,23 +34,24 @@
       <h2>Acesso Restrito</h2>
       <p class="login-card__subtitle">Selecione sua unidade executante para prosseguir.</p>
 
-      <form id="formLogin">
-        <div class="form-group">
-          <label for="unidadeSelect">Unidade de Saúde</label>
-          <select id="unidadeSelect" class="form-control" required>
-            <option value="" disabled selected>Carregando unidades...</option>
-          </select>
-        </div>
-
-        <div class="form-group">
-          <label for="password">Senha (CNES ou código da Unidade)</label>
-          <input type="password" id="password" class="form-control" placeholder="Digite o código" required />
-        </div>
-
-        <button type="submit" class="btn btn-primary">Entrar no Sistema</button>
-
-        <div id="loginError" class="form-error" aria-live="polite"></div>
-      </form>
+	<form id="formLogin">
+	  <div class="form-group" style="position: relative;">
+	    <label for="unidadeBusca">Unidade de Saúde</label>
+	    <input type="text" id="unidadeBusca" class="form-control" placeholder="Digite o nome da unidade..." autocomplete="off" required />
+	    
+	    <div id="listaSugestoes" class="search-suggestions" style="display: none; position: absolute; width: 100%; background: white; border: 1px solid var(--color-border); border-radius: 8px; z-index: 100; max-height: 200px; overflow-y: auto; box-shadow: var(--am-shadow);"></div>
+	    
+	    <input type="hidden" id="cnesSelecionado" value="" />
+	  </div>
+	
+	  <div class="form-group">
+	    <label for="password">Senha (CNES ou código da Unidade)</label>
+	    <input type="password" id="password" class="form-control" placeholder="Digite o código" required />
+	  </div>
+	
+	  <button type="submit" class="btn btn-primary">Entrar no Sistema</button>
+	  <div id="loginError" class="form-error" aria-live="polite" style="margin-top: 10px; color: var(--color-accent-red); font-weight: bold; text-align: center;"></div>
+	</form>
     </section>
 
   </main>
@@ -76,4 +77,5 @@
   </script>
 </body>
 </html>
+
 
