--- a/dashboard.html
+++ b/dashboard.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard | Agenda SISREG</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="shared/css/variables.css">
   <link rel="stylesheet" href="shared/css/base.css">
   <link rel="stylesheet" href="shared/css/style.css">
@@ -20,16 +21,14 @@
   <div id="navbar-placeholder"></div>
 
   <main id="dashboardArea" class="container">
-    
-    <header class="dashboard-header" style="margin-bottom: 30px; display: flex; justify-content: space-between; align-items: center;">
+    <header class="dashboard-header">
       <div>
-        <h1 style="color: var(--color-primary); margin: 0;">Unidade: <span id="txtUnidade">Carregando...</span></h1>
-        <p style="color: var(--color-text-gray); margin: 5px 0 0;">Painel de Gestão e Monitoramento</p>
+        <h1 style="color: var(--color-primary);">Unidade: <span id="txtUnidade">Carregando...</span></h1>
       </div>
-      <div class="actions-header" style="display: flex; gap: 10px;">
-        <button id="btnSincronizar" class="btn btn-primary" style="width: auto;">🔄 Sincronizar</button>
-        <button id="btnExportarPDF" class="btn" style="width: auto; background: var(--color-accent-red); color: white;">📄 PDF</button>
-        <button id="btnLogout" class="btn" style="width: auto; background: #666; color: white;">Sair</button>
+      <div class="actions-header">
+        <button id="btnSincronizar" class="btn btn-primary">🔄 Sincronizar</button>
+        <button id="btnExportarPDF" class="btn" style="background: var(--color-accent-red); color: white;">📄 PDF</button>
+        <button id="btnLogout" class="btn">Sair</button>
       </div>
     </header>
 
@@ -37,64 +36,35 @@
       <div class="card kpi-card blue">
         <h3>Total de Vagas</h3>
         <p id="totalVagas">0</p>
-        <small>Registradas no Sheets</small>
       </div>
       <div class="card kpi-card green">
         <h3>Profissionais</h3>
         <p id="totalProfissionais">0</p>
-        <small>Base Local (JSON)</small>
       </div>
       <div class="card kpi-card yellow">
         <h3>Procedimentos</h3>
         <p id="totalProcedimentos">0</p>
-        <small>Tipos de Oferta</small>
       </div>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 20px; margin-top: 25px;">
-      <section class="card">
-        <h2 style="font-size: 1.1rem; margin-bottom: 20px; color: var(--color-primary);">Distribuição de Vagas</h2>
-        <div style="height: 250px;"><canvas id="chartVagas"></canvas></div>
-      </section>
-      <section class="card">
-        <h2 style="font-size: 1.1rem; margin-bottom: 20px; color: var(--color-primary);">Oferta por Profissional</h2>
-        <div style="height: 250px;"><canvas id="chartProfissionais"></canvas></div>
-      </section>
+    <div class="charts-section">
+      <section class="card"><canvas id="chartVagas"></canvas></section>
+      <section class="card"><canvas id="chartProfissionais"></canvas></section>
     </div>
 
-    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 25px;">
-      <section class="card" style="border-left: 4px solid var(--color-primary);">
-        <h3 style="font-size: 0.9rem; color: var(--color-text-gray);">Maior Oferta</h3>
-        <p id="insightMaiorOferta" style="font-weight: 700; color: var(--color-primary);">-</p>
-      </section>
-      <section class="card" style="border-left: 4px solid var(--color-accent-yellow);">
-        <h3 style="font-size: 0.9rem; color: var(--color-text-gray);">Dia Crítico</h3>
-        <p id="insightDiaCritico" style="font-weight: 700; color: var(--color-primary);">-</p>
-      </section>
-      <section class="card" style="border-left: 4px solid var(--color-accent-green);">
-        <h3 style="font-size: 0.9rem; color: var(--color-text-gray);">Média de Vagas/Dia</h3>
-        <p id="insightMedia" style="font-weight: 700; color: var(--color-primary);">0</p>
-      </section>
+    <div class="insights-section">
+      <section class="card"><p id="insightMaiorOferta">-</p></section>
+      <section class="card"><p id="insightDiaCritico">-</p></section>
+      <section class="card"><p id="insightMedia">0</p></section>
     </div>
 
-    <div style="margin-top: 25px; text-align: center;">
-      <button id="btnToggleTabela" class="btn" style="width: auto; background: var(--color-bg-light); color: var(--color-primary);">📋 Ver Tabela de Dados</button>
-    </div>
-    
-    <section id="secaoTabela" class="card" style="display: none; margin-top: 20px; overflow-x: auto;">
-      <table id="tabelaDados" style="width: 100%; border-collapse: collapse;">
-        <thead>
-          <tr style="background: var(--color-primary); color: white; text-align: left;">
-            <th style="padding: 10px;">Profissional</th>
-            <th style="padding: 10px;">Procedimento</th>
-            <th style="padding: 10px;">Vagas</th>
-            <th style="padding: 10px;">Data Início</th>
-          </tr>
-        </thead>
+    <button id="btnToggleTabela" class="btn">📋 Ver Tabela</button>
+    <section id="secaoTabela" class="card" style="display: none;">
+      <table id="tabelaDados">
+        <thead></thead>
         <tbody id="corpoTabela"></tbody>
       </table>
     </section>
-
   </main>
 
   <footer id="footerCreditos" class="app-footer"></footer>
