--- a/dashboard.html
+++ b/dashboard.html
@@ -11,6 +11,37 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+<style>
+/* Estilos adicionais para espaçamento */
+.dashboard-grid {
+  margin-top: 30px; /* Espaçamento entre KPIs e gráficos */
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  gap: 24px;
+}
+
+.card.full-width {
+  grid-column: 1 / -1;
+}
+
+/* Botão toggle dentro do card Insights */
+#cardInsights .card-head {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+  margin-bottom: 10px;
+}
+
+#cardInsights .card-head h3 {
+  margin: 0;
+}
+
+/* Tabela oculta por padrão */
+#secTabela {
+  display: none;
+}
+</style>
 </head>
 <body>
 <!-- HEADER -->
@@ -30,6 +61,7 @@
 </div>
 </div>
 </header>
+
 <!-- FILTRO -->
 <section class="filter-section">
 <label for="filtroMes">Filtrar por Mês de Vigência:</label>
@@ -41,9 +73,10 @@
 <option value="10">Outubro</option><option value="11">Novembro</option><option value="12">Dezembro</option>
 </select>
 </section>
+
 <!-- ÁREA DO DASHBOARD (usada no PDF) -->
 <main class="container" id="dashboardArea">
-<!-- KPIs -->
+<!-- KPIs - AGORA COM 4 CARDS -->
 <section class="kpi-container">
 <div class="kpi-card">
 <h3>Total de Vagas</h3>
@@ -61,47 +94,42 @@
 <h3>Procs. Únicos</h3>
 <p id="kpiProcedimentos">0</p>
 </div>
-<div class="kpi-card">
-<h3>Procedimento Líder</h3>
-<p id="kpiLider" style="font-size:1rem;">-</p>
-</div>
 </section>
-<!-- GRID DE GRÁFICOS -->
+
+<!-- GRID DE GRÁFICOS - TÍTULOS ATUALIZADOS -->
 <section class="dashboard-grid">
 <div class="card">
 <h3>🔥 Oferta por Dia e Horário</h3>
 <canvas id="chartHeatmap"></canvas>
 </div>
 <div class="card">
-<h3>🎯 Funil de Oferta</h3>
-<canvas id="chartFunil"></canvas>
+<h3>🎯 Oferta por Horário</h3>
+<canvas id="chartHorario"></canvas>
 </div>
 <div class="card">
-<h3>🧬 Perfil da Unidade</h3>
-<canvas id="chartRadar"></canvas>
+<h3>🧬 Principais Procedimentos</h3>
+<canvas id="chartProcedimentos"></canvas>
 </div>
 <div class="card">
-<h3>🫧 Profissionais por Impacto</h3>
-<canvas id="chartBolhas"></canvas>
+<h3>🏆 Ranking de Profissionais</h3>
+<canvas id="chartRanking"></canvas>
 </div>
 <div class="card">
-<h3>🟡 Distribuição de Vagas</h3>
-<canvas id="chartDonut"></canvas>
+<h3>🔄 1ª Vez vs Retorno</h3>
+<canvas id="chartComparacao"></canvas>
 </div>
 <div class="card">
-<h3>📈 Evolução da Vigência</h3>
-<canvas id="chartLinha"></canvas>
+<h3>📈 Evolução da Oferta</h3>
+<canvas id="chartEvolucao"></canvas>
 </div>
 <div class="card full-width" id="cardInsights">
-<div class="card-head">
 <h3>🧠 Insights Automáticos</h3>
-<button class="btn btn-toggle" id="btnToggleTabela">📋 Ver Tabela</button>
-</div>
 <ul id="listaInsights"></ul>
 </div>
 <!-- (Opcional) se seu JS da Fase 3 usar KPI de média -->
 <span id="kpiMedia" style="display:none;"></span>
 </section>
+
 <!-- TABELA (OCULTA) -->
 <section id="secTabela" class="card full-width" style="margin-top:20px;">
 <h3>📋 Tabela Detalhada</h3>
@@ -127,6 +155,7 @@
 </div>
 </section>
 </main>
+
 <!-- FOOTER -->
 <footer id="footerCreditos"></footer>
 
