--- a/dashboard.html
+++ b/dashboard.html
@@ -6,40 +6,37 @@
 <title>Dashboard | Agenda SISREG</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="css/theme.css">
-<link rel="stylesheet" href="css/style.css">
 <!-- Bibliotecas externas -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
 <style>
-/* Estilos adicionais para espaçamento */
-.dashboard-grid {
-  margin-top: 30px; /* Espaçamento entre KPIs e gráficos */
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 24px;
+/* Mantive APENAS o mínimo para a página não "quebrar" */
+body{ margin:0; font-family:'Inter',sans-serif; }
+#secTabela{ display:none; }
+.full-width{ grid-column: 1 / -1; }
+/* [AJUSTE] Botão "Ver Tabela" dentro do card Insights */
+#cardInsights .card-head{
+display: flex;
+align-items: center;
+justify-content: space-between;
+gap: 12margin-bottom: 10px;
+}
+/* override do .card h3 (pra não dar margem duplicada) */
+#cardInsights .card-head h3{
+margin: 0;
+}
+#cardInsights #btnToggleTabela{
+white-space: nowrap;
 }
 
-.card.full-width {
-  grid-column: 1 / -1;
-}
-
-/* Botão toggle dentro do card Insights */
-#cardInsights .card-head {
+/* [CORREÇÃO] Posicionamento dos botões na margem direita */
+.header-btns {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 12px;
-  margin-bottom: 10px;
-}
-
-#cardInsights .card-head h3 {
-  margin: 0;
-}
-
-/* Tabela oculta por padrão */
-#secTabela {
-  display: none;
+  gap: 10px;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
 </style>
 </head>
@@ -61,7 +58,6 @@
 </div>
 </div>
 </header>
-
 <!-- FILTRO -->
 <section class="filter-section">
 <label for="filtroMes">Filtrar por Mês de Vigência:</label>
@@ -73,10 +69,9 @@
 <option value="10">Outubro</option><option value="11">Novembro</option><option value="12">Dezembro</option>
 </select>
 </section>
-
 <!-- ÁREA DO DASHBOARD (usada no PDF) -->
 <main class="container" id="dashboardArea">
-<!-- KPIs - AGORA COM 4 CARDS -->
+<!-- KPIs -->
 <section class="kpi-container">
 <div class="kpi-card">
 <h3>Total de Vagas</h3>
@@ -95,8 +90,7 @@
 <p id="kpiProcedimentos">0</p>
 </div>
 </section>
-
-<!-- GRID DE GRÁFICOS - TÍTULOS ATUALIZADOS -->
+<!-- GRID DE GRÁFICOS -->
 <section class="dashboard-grid">
 <div class="card">
 <h3>🔥 Oferta por Dia e Horário</h3>
@@ -129,7 +123,6 @@
 <!-- (Opcional) se seu JS da Fase 3 usar KPI de média -->
 <span id="kpiMedia" style="display:none;"></span>
 </section>
-
 <!-- TABELA (OCULTA) -->
 <section id="secTabela" class="card full-width" style="margin-top:20px;">
 <h3>📋 Tabela Detalhada</h3>
@@ -155,10 +148,8 @@
 </div>
 </section>
 </main>
-
 <!-- FOOTER -->
 <footer id="footerCreditos"></footer>
-
 <!-- Scripts - ORDEM CRÍTICA -->
 <script src="js/config.js"></script>
 <script src="js/dashboard.js"></script>
