--- a/escalas.html
+++ b/escalas.html
@@ -10,6 +10,11 @@
 </head>
 <body>
 <header class="dash-header">
+  <!-- Elementos decorativos -->
+  <div class="header-decorative circle-1"></div>
+  <div class="header-decorative circle-2"></div>
+  <div class="header-decorative circle-3"></div>
+  
 <div class="unit-info">
 <h1 id="txtUnidade">Carregando unidade...</h1>
 <p>Lançamento de Escalas • <strong>SISREG Amazonas</strong></p>
