--- a/escalas.html
+++ b/escalas.html
@@ -17,6 +17,7 @@
   
 <div class="unit-info">
 <h1 id="txtUnidade">Carregando unidade...</h1>
+  <div class="gradient-line"></div>
 <p>Lançamento de Escalas • <strong>SISREG Amazonas</strong></p>
 </div>
 <div class="header-btns">
