--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,7 @@
     
   <div class="unit-info">
     <h1 id="txtUnidade">Carregando unidade...</h1>
+    <div class="gradient-line"></div>
     <p>Painel Gerencial de Escalas • <strong>SISREG Amazonas</strong></p>
   </div>
 
