--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 <!-- Bibliotecas externas -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-<!-- ✅ ADIÇÃO: D3 + Sankey (somente para os NOVOS gráficos) -->
+<!-- [NOVO - SOMENTE PARA GRÁFICOS] D3 + Sankey -->
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/d3-sankey@0.12.3/dist/d3-sankey.min.js"></script>
 
@@ -56,15 +56,28 @@
   justify-content: flex-end;
 }
 
-/* ✅ ADIÇÃO: pequenos ajustes só para os SVGs dos novos gráficos */
-svg.chart-svg {
-  width: 100%;
-  height: 360px;
-  display: block;
+/* [NOVO - SOMENTE PARA GRÁFICOS] Tooltip D3 */
+#vizTooltip{
+  position: fixed;
+  z-index: 9999;
+  pointer-events: none;
+  background: rgba(15,16,20,0.92);
+  color: #fff;
+  padding: 10px 12px;
+  border-radius: 10px;
+  font-size: 12px;
+  line-height: 1.35;
+  display: none;
+  max-width: 260px;
+  box-shadow: 0 10px 25px rgba(0,0,0,.18);
 }
 </style>
 </head>
 <body>
+
+<!-- Tooltip para gráficos D3 -->
+<div id="vizTooltip"></div>
+
 <!-- HEADER -->
 <header class="dash-header">
   <!-- Elementos decorativos -->
@@ -124,36 +137,29 @@ svg.chart-svg {
 </div>
 </section>
 
-<!-- GRID DE GRÁFICOS -->
+<!-- GRID DE GRÁFICOS - [ALTERADO SOMENTE AQUI] -->
 <section class="dashboard-grid">
 
-  <!-- ✅ SUBSTITUIÇÃO: removi todos os gráficos antigos e coloquei novos -->
-  <div class="card full-width">
-    <h3>🧿 Mapa Radial de Oferta (Dia × Hora)</h3>
-    <svg id="chartRadial" class="chart-svg"></svg>
+  <div class="card">
+    <h3>🌀 Padrão de Oferta (Radial)</h3>
+    <svg id="chartRadial" style="width:100%; height: 320px;"></svg>
   </div>
 
   <div class="card">
-    <h3>⚖️ Eficiência dos Profissionais (Vagas × % Retorno)</h3>
-    <canvas id="chartScatter"></canvas>
+    <h3>⚖️ Eficiência por Profissional (Bubble)</h3>
+    <canvas id="chartEficiência"></canvas>
   </div>
 
   <div class="card">
-    <h3>🧭 Distribuição da Oferta na Semana (Radar)</h3>
-    <canvas id="chartRadar"></canvas>
-  </div>
-
-  <div class="card full-width">
-    <h3>🔀 Fluxo Inteligente (Dia → Tipo → Procedimento)</h3>
-    <svg id="chartSankey" class="chart-svg"></svg>
+    <h3>🌊 Fluxo por Horário (Stream)</h3>
+    <svg id="chartStream" style="width:100%; height: 320px;"></svg>
   </div>
 
   <div class="card">
-    <h3>🚦 Mapa de Risco (Concentração e Retorno)</h3>
-    <canvas id="chartRisco"></canvas>
+    <h3>🔀 Fluxo Dia → Profissional → Tipo (Sankey)</h3>
+    <svg id="chartSankey" style="width:100%; height: 320px;"></svg>
   </div>
 
-  <!-- Insights (mantido) -->
   <div class="card full-width" id="cardInsights">
     <h3>🧠 Insights Automáticos</h3>
     <ul id="listaInsights"></ul>
