--- a/index.html
+++ b/index.html
@@ -443,9 +443,7 @@
   </div>
 
   <!-- Footer com créditos -->
-  <div class="footer-credits" id="footerCreditos">
-    <!--© 2026 - <strong>Agenda SISREG</strong> | Desenvolvido por Euripedes Javeras -->
-  </div>
+  <footer id="footerCreditos"></footer>
 
   <!-- Scripts - ORDEM CRÍTICA -->
   <script src="js/config.js"></script>
