--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
     <!-- Título -->
     <div class="login-title">
       <h1 id="tituloSistema">Agenda SISREG</h1>
-      <p id="subtituloSistema">Sistema de Gestão de Escalas</p>
+      <p id="subtituloSistema">Complexo Regulador do Amazonas</p>
     </div>
     
     <!-- Card de login -->
@@ -424,7 +424,7 @@
         </div>
         
         <div class="form-group">
-          <label for="password">Senha de Acesso (CNES)</label>
+          <label for="password">Senha de Acesso</label>
           <input 
             type="password" 
             id="password" 
