--- a/escalas.html
+++ b/escalas.html
@@ -57,7 +57,7 @@
 <main class="page">
 <section class="card">
 <h2>Nova Escala</h2>
-<p class="subtext">Preencha os dados e salve localmente. Depois, exporte e envie ao Sheets.</p>
+<p class="subtext">Preencha os dados e salve localmente. Depois, exporte e envie pelo SUPORTE-SISREG (GLPI).</p>
 <form id="formEscala">
 <div class="campo">
 <label>CPF do Profissional</label>
@@ -118,7 +118,7 @@
 </section>
 <section class="card">
 <h2>Escalas Inseridas</h2>
-<p class="subtext">Itens salvos no navegador. Ao finalizar, exporte e envie para a nuvem.</p>
+<p class="subtext">Itens salvos no navegador. Ao finalizar, exporte e envie pelo SUPORTE-SISREG (GPLI).</p>
 <button id="btnExportarCSV" type="button">Exportar CSV e Finalizar Escalas</button>
 <button id="btnLimparTudo" type="button">🗑️ Limpar Tudo</button>
 <div class="table-wrapper">
