--- a/dashboard.html
+++ b/dashboard.html
@@ -231,7 +231,7 @@
   <div class="unit-info">
     <h1 id="txtUnidade">Carregando unidade...</h1>
     <div class="gradient-line"></div>
-    <p>Painel Gerencial de Escalas • <strong>SISREG Amazonas</strong></p>
+    <p>Dashboard Escalas • <strong>SISREG Amazonas</strong></p>
   </div>
 
   <div style="display:flex;justify-content:space-between;align-items:center;position:relative;z-index:2;">
